Made it so the web app only shows 32 cheeps and have pages instead. testing still required Currently works without SQLite.
Co-authored-by: Niels <nfab@itu.dk>

--- a/src/Chirp.Razor/Chirp.Razor/Pages/UserTimeline.cshtml
+++ b/src/Chirp.Razor/Chirp.Razor/Pages/UserTimeline.cshtml
@@ -25,6 +25,11 @@
                 </li>
             }
         </ul>
+         <div class="pageNumber">
+            <button onclick="location.href='?change=-1'" >previous</button>
+            <p>@Model.getPage()</p>
+            <button onclick="location.href='?change=+1'" >next</button>
+          </div>
     }
     else
     {
