--- a/src/Chirp.Razor/Chirp.Razor/Pages/Public.cshtml
+++ b/src/Chirp.Razor/Chirp.Razor/Pages/Public.cshtml
@@ -7,11 +7,10 @@
 
 <div>
     <h2> Public Timeline </h2>
-
     @if (Model.Cheeps.Any())
     {
         <ul id="messagelist" class="cheeps">
-            @foreach (var cheep in Model.Cheeps)
+          @foreach (var cheep in Model.Cheeps)
             {
                 <li>
                     <p>
@@ -23,7 +22,13 @@
                     </p>
                 </li>
             }
-        </ul>
+        </ul> 
+        @* window.location.href.reload() *@
+          <div class="pageNumber">
+            <button onclick="location.href='?change=-1'" >previous</button>
+            <p>@Model.getPage()</p>
+            <button onclick="location.href='?change=+1'" >next</button>
+          </div>
     }
     else
     {
