Fixed SQL query to work with Razor As of now the web-page can read from the sql database and show it on the page. You can also click on an author to see thier specifik cheeps. Pagination is not right so it needs to be changed The SQL database is creating itself however you need to rerun the razor-app to see the data.
Co-authored-by: Niels <nfab@itu.dk>

--- a/src/Chirp.Razor/Pages/UserTimeline.cshtml
+++ b/src/Chirp.Razor/Pages/UserTimeline.cshtml
@@ -25,8 +25,9 @@
                 </li>
             }
         </ul>
+        //For later add this https://github.com/itu-bdsa/lecture_notes/blob/main/sessions/session_05/Slides.md#mapping-of-razor-pages-to-endpoints
          <div class="pageNumber">
-            <button onclick="location.href='?change=-1'" >previous</button>
+            <button onclick="location.href='?change=-1'" >previous</button> //should be href="/"
             <p>@Model.getPage()</p>
             <button onclick="location.href='?change=+1'" >next</button>
           </div>
