Fixed SQL query to retriving cheeps from authorid, using a subquery that retrieves the userid from users table, usign the username. Be aware, that user is not a key, and there is a assumption that usernames a unique, which does not hold for production, and have to be changed later on.
Changed link in logo, to refference home folder ~/ instead of linking to localhost:5000, so it works regardles of domain and port.

Co-authored-by: Niels <nfab@itu.dk>
Co-authored-by: Oliver <oash@itu.dk>

--- a/src/Chirp.Razor/Pages/Shared/_Layout.cshtml
+++ b/src/Chirp.Razor/Pages/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class=page>
-    <h1><a class="logoStyling" href="http://localhost:5000"><img src="/images/icon1.png" alt="Icon1"/>Chirp!</a></h1>
+    <h1><a class="logoStyling" href="~/"><img src="/images/icon1.png" alt="Icon1"/>Chirp!</a></h1>
 
     <div class=body>
         @RenderBody()
