Changed color of logo (link) to intended colors of design

--- a/src/Chirp.Razor/wwwroot/css/style.css
+++ b/src/Chirp.Razor/wwwroot/css/style.css
@@ -233,3 +233,12 @@ li.topic {
   color: #26776F;
   flex-direction: row;
 }
+
+.logoStyling {
+  color: white;
+  text-decoration: none;
+}
+
+.logoStyling:hover {
+  color: white;
+}
