--- a/src/Chirp.Razor/Pages/Public.cshtml
+++ b/src/Chirp.Razor/Pages/Public.cshtml
@@ -25,11 +25,11 @@
             }
         </ul> 
         @* window.location.href.reload() *@
-          <div class="pageNumber">
+          <!-- <div class="pageNumber">
             <button onclick="location.href='?change=-1'" >previous</button>
             <p>@Model.getPage()</p>
             <button onclick="location.href='?change=+1'" >next</button>
-          </div>
+          </div> -->
     }
     else
     {
