--- a/src/Chirp.Razor/Pages/Public.cshtml
+++ b/src/Chirp.Razor/Pages/Public.cshtml
@@ -24,15 +24,16 @@
                 </li>
             }
         </ul> 
-        @* window.location.href.reload() *@
-          <!-- <div class="pageNumber">
-            <button onclick="location.href='?change=-1'" >previous</button>
-            <p>@Model.getPage()</p>
-            <button onclick="location.href='?change=+1'" >next</button>
-          </div> -->
+           <div class="pageNumber">
+            <button onclick="location.href='?page=1'">Go to page 1</button>
+        @*   <button onclick="@GetDecrement()" >previous</button>
+            <p>@Model.GetPage()</p>
+            <button onclick="location.href=@GetIncrement()">next</button>*@
+          </div>
     }
     else
     {
         <em>There are no cheeps so far.</em>
     }
 </div>
+
