--- a/src/Chirp.Razor/Pages/UserTimeline.cshtml
+++ b/src/Chirp.Razor/Pages/UserTimeline.cshtml
@@ -27,9 +27,10 @@
         </ul>
         //For later add this https://github.com/itu-bdsa/lecture_notes/blob/main/sessions/session_05/Slides.md#mapping-of-razor-pages-to-endpoints
          <div class="pageNumber">
-            <button onclick="location.href='?change=-1'" >previous</button> <!-- should be href="/" -->
+            <button onclick="location.href='?page=1'">Go to page 1</button>
+            @* <button onclick="location.href='?change=-1'" >previous</button>
             <p>@Model.getPage()</p>
-            <button onclick="location.href='?change=+1'" >next</button>
+            <button onclick="location.href='?change=+1'" >next</button> *@
           </div>
     }
     else
