Added saving to database
Still having trouble with sending the strings between the razor page and the model class. This isn't a priority for now so will leave it as is for now. Also added a IgnoreAntiforgeryTokenAttribute to the builder as it gets an error from the submit otherwise. Will have to read up more on that

--- a/src/Chirp.Razor/Pages/Cheep.cshtml
+++ b/src/Chirp.Razor/Pages/Cheep.cshtml
@@ -1,24 +1,23 @@
 ﻿@page "/Cheep"
-@model Chirp.Razor.Pages.UserTimelineModel
+@model Chirp.Razor.Pages.CheepModel
 @{
     ViewData["Title"] = "Chirp!";
     Layout = "Shared/_Layout";
 }
 
-<div>
-    <form action="#" method="post">
-        <div>
-            <label for="author">Author:</label>
-            <input type="text" id="author" name="author" minlength="5" maxlength="50" required>
+<form asp-page-handler="sendCheep" id="contact-form" method="post">
+    <div class="messages"></div>
+    <div class="controls">
+        <div class="row">
+            <div class="col-md-6">
+                <input asp-for="CheepMessage.Author" placeholder="Author" required="required" class="form-control">
+            </div>
+            <div class="col-md-6">
+                <input asp-for="CheepMessage.Message" placeholder="Cheep-text" required="required" class="form-control">
+            </div>
+            <div class="col-md-12 text-center">
+                <button type="submit" asp-route-data="HttpPostAttribute" asp-page-handler="SendEmail" class="btn btn-outline-primary">Send message</button>
+            </div>
         </div>
-
-        <div>
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" rows="4" cols="50" maxlength="160" required></textarea>
-        </div>
-
-        <div>
-            <input type="submit" value="Submit">
-        </div>
-    </form>
-</div>
+    </div>
+</form>
