Added navigation to the /Cheep page and a way to return

--- a/src/Chirp.Razor/Pages/Cheep.cshtml
+++ b/src/Chirp.Razor/Pages/Cheep.cshtml
@@ -20,4 +20,7 @@
             </div>
         </div>
     </div>
+    <div class="pageNumber">
+        <button onclick="location.href='/?page=1'">Go to page 1</button>
+    </div>
 </form>
