--- a/src/Chirp.Razor/Pages/Public.cshtml
+++ b/src/Chirp.Razor/Pages/Public.cshtml
@@ -50,6 +50,9 @@
                     <button onclick="location.href='?page=20'">20</button>
                     <button onclick="location.href='?page=21'">21</button>
                 </div>
+                 <div class="CreateCheep">
+                <button onclick="location.href='/Cheep'">Write a Cheep!</button>
+                </div>
             }
             else
             {
