--- a/src/Chirp.Razor/Pages/UserTimeline.cshtml
+++ b/src/Chirp.Razor/Pages/UserTimeline.cshtml
@@ -34,6 +34,9 @@
                     <p>@Model.getPage()</p>
                     <button onclick="location.href='?change=+1'" >next</button> *@
                 </div>
+                 <div class="CreateCheep">
+                    <button onclick="location.href='/Cheep'">Write a Cheep!</button>
+                </div>
             }
             else
             {
