Fixed button not working
Removed the button in the <form> so that it actually works now. Also addCheep works but doenst refresh the datbase so curerntly wont work. We will also need to add a getauthorIDbyname method. The addCheep won't work if it doesnt exist

--- a/src/Chirp.Razor/Pages/Cheep.cshtml
+++ b/src/Chirp.Razor/Pages/Cheep.cshtml
@@ -17,8 +17,8 @@
         <div class="col-md-12 text-center">
             <button type="submit" asp-page-handler="Submit">Submit</button>
         </div>
-         <div class="pageNumber">
-            <button onclick="location.href='?page=1'">Go to page 1</button>
-        </div>
     </div>
 </form>
+    <div class="pageNumber">
+                <button onclick="location.href='/'">Go to page 1</button>
+    </div>
