--- a/src/Chirp.Razor/Pages/Cheep.cshtml
+++ b/src/Chirp.Razor/Pages/Cheep.cshtml
@@ -12,7 +12,7 @@
             <input type="text" id="authorInput" asp-for="Author" placeholder="Author" required="required">
         </div>
         <div class="col-md-6">
-            <input type="text" id="CheepMessageInput" asp-for="CheepMessage" placeholder="Message" required="required">
+            <input type="text" id="CheepMessageInput" asp-for="CheepMessage" placeholder="Message" required="required"  maxlength="160" style="width: 300px;">
         </div>
         <div class="col-md-12 text-center">
             <button type="submit" asp-page-handler="Submit">Submit</button>
