Added auth login to github >> Co-authored-by: Lukas <lukan@itu.dk> >> Co-authored-by: Niels <nfab@itu.dk> >> Co-authored-by: Anna <annaj@itu.dk>

--- a/src/Chirp.Razor/Pages/Shared/_Layout.cshtml
+++ b/src/Chirp.Razor/Pages/Shared/_Layout.cshtml
@@ -14,15 +14,15 @@
             <div>
                 <a href="/@(User.Identity.Name)">my timeline</a> |
                 <a href="/">public timeline</a> |
-                <a ... >logout [@(User.Identity.Name)]</a>
+                <a href="https://github.com/logout" >logout [@(User.Identity.Name)]</a>
             </div>
         }
         else
         {
             <div>
                 <a href="/">public timeline</a> |
-                <a ... >register</a>
-                <a ... >login</a>
+                <a href="/.auth/login/github" >register</a>
+                <a href="/.auth/login/github" >login</a>
             </div>
         }
     </div>
