Page testing - NOT WORKING

--- a/src/Chirp.Razor/Pages/Cheep.cshtml
+++ b/src/Chirp.Razor/Pages/Cheep.cshtml
@@ -22,3 +22,18 @@
     <div class="pageNumber">
         <button onclick="location.href='/'">Go to page 1</button>
     </div>
+
+@*
+<!-- 
+@{
+    <div class="Form-group">
+        <form method="post">
+            <div class="form-group">
+                <label asp-for="CheepMessage"></label>
+                <textarea asp-for="CheepMessage" class="form-control" />
+                <span asp-validation-for="CheepMessage"></span>
+        </form>
+        <button type="submit" class="btn btn-primary">Chirp!</button>
+    </div>
+} -->
+*@
