--- a/src/Chirp.Razor/Pages/Shared/_Layout.cshtml
+++ b/src/Chirp.Razor/Pages/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
                 <a href="/@(User.Identity.Name)">my timeline</a> |
                 <a href="/">public timeline</a> |
                 <a href="https://github.com/logout" >logout [@(User.Identity.Name)]</a>
+                <a href="location.href='/NewCheep'">Cheep!</a>
             </div>
         }
         else
