This makes the share on public timeline work, although a user is hardcoded into the program as user authentication hasn't been implemented correctly yet

--- a/src/Chirp.Razor/Pages/Shared/_Layout.cshtml
+++ b/src/Chirp.Razor/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
 ﻿<!DOCTYPE html>
+<partial name="../Cheep.cshtml" />
 <html lang="en">
 <head>
     <title>@ViewData["Title"]</title>
@@ -26,8 +27,6 @@
             </div>
         }
     </div>
-
-    <div class=body>
         @RenderBody()
     </div>
     <div class=footer>
