--- a/src/Chirp.Razor/Pages/Public.cshtml
+++ b/src/Chirp.Razor/Pages/Public.cshtml
@@ -1,15 +1,24 @@
 ﻿@page "/"
-
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @model Chirp.Razor.Pages.PublicModel
 @{
     ViewData["Title"] = "Chirp!";
     Layout = "Shared/_Layout";
 }
 
-<div>
+    <div>
+    <div class=body>
+          <div class="cheepbox">
+        <h3>What's on your mind @(User.Identity.Name)?</h3>
+        <form method="post">
+            <input type ="text" style="float: left" asp-for="CheepMessageTimeLine">
+            <input type="submit" asp-page-handler="Submit" value="Share">
+        </form>
+        </div>
     <h2> Public Timeline </h2>
     @{  if (Model.Cheeps != null) 
         {
+            
             if (Model.Cheeps.Any()) 
             {
                 <ul id="messagelist" class="cheeps">
