--- a/src/Chirp.Razor/Pages/Public.cshtml
+++ b/src/Chirp.Razor/Pages/Public.cshtml
@@ -9,10 +9,10 @@
     <div>
     <div class=body>
           <div class="cheepbox">
-        <h3>What's on your mind @(User.Identity.Name)?</h3>
+        <h3>What's on your mind <!--@(User.Identity.Name)?--></h3>
         <form method="post">
             <input type ="text" style="float: left" asp-for="CheepMessageTimeLine">
-            <input type="submit" asp-page-handler="Submit" value="Share">
+            <input type="submit" asp-page-handler="Submit"> <!--value="Share" should be inside submit-->
         </form>
         </div>
     <h2> Public Timeline </h2>
