Revert "Added some b2c stuff to appsettings"

--- a/src/Chirp.Razor/Pages/Public.cshtml
+++ b/src/Chirp.Razor/Pages/Public.cshtml
@@ -18,7 +18,7 @@
                         <li>
                             <p>
                                 <strong>
-                                    <a href="~/@cheep.Author">@cheep.Author</a>
+                                    <a href="/@cheep.Author">@cheep.Author</a>
                                 </strong>
                                 @cheep.Message
                                 <small>&mdash; @cheep.Timestamp</small>
