Changed some builder stuff in program.cs according to this guide https://learn.microsoft.com/en-us/azure/active-directory-b2c/enable-authentication-web-application?tabs=visual-studio-code

--- a/src/Chirp.Razor/Pages/Shared/_Layout.cshtml
+++ b/src/Chirp.Razor/Pages/Shared/_Layout.cshtml
@@ -1,14 +1,4 @@
-﻿@using System.Security.Principal
-@using Microsoft.AspNetCore.Authentication.OpenIdConnect
-@using Microsoft.Extensions.Options
-@using Microsoft.Identity.Web
-
-@inject IOptionsMonitor<MicrosoftIdentityOptions> AzureADB2COptions
-
-@{
-    var options = AzureADB2COptions.Get(OpenIdConnectDefaults.AuthenticationScheme);
-}
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <title>@ViewData["Title"]</title>
