--- a/src/Chirp.Razor/Pages/UserPage.cshtml
+++ b/src/Chirp.Razor/Pages/UserPage.cshtml
@@ -1,7 +1,7 @@
 @page "/profilepage"
 @* @page "/{author}/profilepage" *@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@model Chirp.Razor.Pages.CheepModel
+@model Chirp.Razor.Pages.UserPage
 @{
     ViewData["Title"] = "Chirp!";
     Layout = "Shared/_Layout";
