Logo sends user back again

--- a/src/Chirp.Razor/Pages/Shared/_Layout.cshtml
+++ b/src/Chirp.Razor/Pages/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
 
 <body>
     <div class=page>
-        <h1><img src="/images/icon1.png" alt="Icon1" />Chirp!</h1>
+        <h1><a class="logoStyling" href="~/"><img src="/images/icon1.png" alt="Icon1"/>Chirp!</a></h1>
 
         <div class=navigation>
             @if (User.Identity?.IsAuthenticated == true)
