This is a temp fix for login button and tests not working will fix later just want to test if auth now works once deployed

--- a/src/Chirp.Razor/Pages/Shared/_Layout.cshtml
+++ b/src/Chirp.Razor/Pages/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                 <div>
                     <a href="/">public timeline</a> |
                     <!-- the tags aren't working but auth is now rip -->
-                    <a href="https://Chirp4.b2clogin.com/Chirp4.onmicrosoft.com/oauth2/v2.0/authorize?p=B2C_1_SigninSignupGithub&client_id=85f39c1b-c0db-41f5-b9f2-3bcc759afc4d&nonce=defaultNonce&redirect_uri=http%3A%2F%2Flocalhost%3A5000%2F&scope=openid&response_type=id_token&prompt=login">login</a> |
+                    <a href="/profilepage">login</a> |
 
                 </div>
             }
