--- a/src/Chirp.Razor/Pages/Shared/_Layout.cshtml
+++ b/src/Chirp.Razor/Pages/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                     <a href="/@(User.Identity.Name)">my timeline</a> |
                     <a href="/">public timeline</a> |
                     <!-- the tags aren't working but auth is now rip -->
-                    <a href="/"> logout [@(User.Identity.Name)]</a> |
+                    <a href="/logout"> logout [@(User.Identity.Name)]</a> |
                     <a href="/Profilepage">Profile page</a>
                 </div>
             }
