--- a/src/Chirp.Razor/Pages/UserPage.cshtml
+++ b/src/Chirp.Razor/Pages/UserPage.cshtml
@@ -21,8 +21,8 @@
     <p>This is a project that group 4 is making in the course BDSA at ITU.</p>
 
     <h3>What information we collect from you</h3>
-    <li>When you register with github we get access to most of your Github information.</li>
-    <li>When registered we collect your username, password, ID, name and email.</lli>
+    <li>When you register with github we get access to most of your Github information, but we don't use it.</li>
+    <li>When registered we collect your username, name, email and create an ID.</lli>
     <li>We will keep a few lists of who you are following, being followed by and which cheeps you are posting.</li>
 
     <h3>How we use your information</h3>
