--- a/src/Chirp.Razor/Pages/UserPage.cshtml
+++ b/src/Chirp.Razor/Pages/UserPage.cshtml
@@ -22,7 +22,7 @@
 
     <h3>What information we collect from you</h3>
     <li>When you register with github we get access to most of your Github information, but we don't use it.</li>
-    <li>When registered we collect your username, name, email and create an ID.</lli>
+    <li>When registered we collect your username, email and create an ID.</lli>
     <li>We will keep a few lists of who you are following, being followed by and which cheeps you are posting.</li>
 
     <h3>How we use your information</h3>
