Added the forget me button design

--- a/src/Chirp.Razor/Pages/UserPage.cshtml
+++ b/src/Chirp.Razor/Pages/UserPage.cshtml
@@ -22,20 +22,20 @@
 
     <h3>What information we collect from you</h3>
     <li>When you register with github we get access to most of your Github information, but we don't use it.</li>
-    <li>When registered we collect your username, email and create an ID.</lli>
+    <li>When registered we collect your username, email and create an ID.</li>
     <li>We will keep a few lists of who you are following, being followed by and which cheeps you are posting.</li>
 
     <h3>How we use your information</h3>
     <p>We use your information to create a great experience on our application, and to make sure everything is working correctly.</p>
     <p>Your information will be kept with us/our professor/class and will move no further.</p>
     <p>Your concrete information is saved in our database using sql.</p>
-    <br
+    <br />
 </div>
 
 <div>
     <h2>Authentication Type:</h2>
     <p>@User?.Identity?.AuthenticationType</p>
-    <br
+    <br />
 </div>
 
 <div>
@@ -49,4 +49,16 @@
             }
         }
     </ul>
+    <br />
+</div>
+
+<div>
+    <h2>Deletion of account</h2>
+    <p>When pressing the Forget Me button, we will delete all your information</p>
+    <button 
+        type="button" 
+        class="btn btn-danger" 
+        style="background-color: rgb(255, 68, 68); color: white; float: right;"
+    >Forget Me</button>
+    <br />
 </div>
