--- a/src/Chirp.Razor/Pages/Public.cshtml
+++ b/src/Chirp.Razor/Pages/Public.cshtml
@@ -29,7 +29,7 @@
                             <p>
                                 <strong>
                                     <a href="/@cheep.Author">@cheep.Author</a>
-                                    @if (User.Identity.IsAuthenticated) {
+                                    @if (User.Identity?.IsAuthenticated == true) {
                                         if (!Model.DoesFollow(cheep.AuthorId)) 
                                         {
                                             // Link to page that adds the author to the following list of the current user and redirects back to the current page
