Docker works, claims is still an issue

--- a/src/Chirp.Razor/Pages/UserPage.cshtml
+++ b/src/Chirp.Razor/Pages/UserPage.cshtml
@@ -60,7 +60,7 @@
         <input type="submit" value="Forget Me" class="btn btn-danger"
             style="background-color: rgb(255, 68, 68); color: white; float: right;"
             asp-page-handler="ForgetMe"
-        >Forget Me</input>
+        ></input>
     </form>
     <br />
 </div>
