Alert box works as intended - still no author claim found

--- a/src/Chirp.Razor/Pages/UserPage.cshtml
+++ b/src/Chirp.Razor/Pages/UserPage.cshtml
@@ -60,7 +60,9 @@
         <input type="submit" value="Forget Me" class="btn btn-danger"
             style="background-color: rgb(255, 68, 68); color: white; float: right;"
             asp-page-handler="ForgetMe"
-        ></input>
+            onclick="return confirm('Are you sure you want to delete your account? This cannot be undone')" 
+        >
+        </input>
     </form>
     <br />
 </div>
