--- a/src/Chirp.Razor/Pages/UserPage.cshtml
+++ b/src/Chirp.Razor/Pages/UserPage.cshtml
@@ -60,8 +60,7 @@
         <input type="submit" value="Forget Me" class="btn btn-danger"
             style="background-color: rgb(255, 68, 68); color: white; float: right;"
             asp-page-handler="ForgetMe"
-            onclick="return confirm('Are you sure you want to delete your account? This cannot be undone')" 
-        >
+            onclick="return confirm('Are you sure you want to delete your account? This cannot be undone')" >
         </input>
     </form>
     <br />
