Fixed adding cheeps on both userpage and timeline
Had a bug where 2nd cheep added would crash

Co-Authored-By: SkarpKat <143702901+SkarpKat@users.noreply.github.com>

--- a/src/Chirp.Razor/Pages/UserTimeline.cshtml
+++ b/src/Chirp.Razor/Pages/UserTimeline.cshtml
@@ -1,4 +1,5 @@
 ﻿@page "/{author}"
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @model Chirp.Razor.Pages.UserTimelineModel
 @{
     ViewData["Title"] = "Chirp!";
@@ -7,14 +8,14 @@
 }
             
     <div class=body>
-         @if (User.Identity?.IsAuthenticated == true && User.Identity?.Name != null) {
+        @if (User.Identity?.IsAuthenticated == true) {
           <div class="cheepbox">
         <h3>What's on your mind @(User.Identity.Name)?</h3>
         <form method="post">
             <input type ="text" style="float: left" asp-for="CheepMessageTimeLine">
-            <input type="submit" asp-page-handler="Submit" value="Share"> <!--value="Share" should be inside submit-->
+            <input type="submit" asp-page-handler="Submit" value="Share">
         </form>
-        </div>
+    </div>
         }
     <h2> @routeName's Timeline </h2>
 
