--- a/src/Chirp.Razor/Pages/Public.cshtml
+++ b/src/Chirp.Razor/Pages/Public.cshtml
@@ -12,9 +12,9 @@
         <h3>What's on your mind @(User.Identity.Name)?</h3>
         <form method="post">
             <input type ="text" style="float: left" asp-for="CheepMessageTimeLine">
-            <input type="submit" asp-page-handler="Submit" value="Share"> <!--value="Share" should be inside submit-->
+            <input type="submit" asp-page-handler="Submit" value="Share">
         </form>
-        </div>
+    </div>
         }
     <h2> Public Timeline </h2>
     @{  if (Model.Cheeps != null) 
