--- a/src/Chirp.Razor/Pages/UserTimeline.cshtml
+++ b/src/Chirp.Razor/Pages/UserTimeline.cshtml
@@ -29,6 +29,18 @@
                             <p>
                                 <strong>
                                     <a href="/@cheep.Author">@cheep.Author</a>
+                                    @if (User.Identity?.IsAuthenticated == true) {
+                                        if (!Model.DoesFollow(cheep.AuthorId)) 
+                                        {
+                                            // Link to page that adds the author to the following list of the current user and redirects back to the current page
+                                            <a href="location.href='?follow=@cheep.AuthorId'">follow</a>
+                                        } 
+                                        else 
+                                        {
+                                            // Link to page that removes the author from the following list of the current user and redirects back to the current page
+                                            <a href="location.href='?unfollow=@cheep.AuthorId'">unfollow</a>
+                                        }
+                                    }
                                 </strong>
                                 @cheep.Message
                                 <small>&mdash; @cheep.Timestamp</small>
